# 4_labaa

./: .gitignore  CMakeLists.txt
vector/: CMakeLists.txt  main.cpp
vectorlib/: CMakeLists.txt  MatrixT.h  VectorT.cpp  VectorT.h
